--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,4 +3,6 @@ $fontLight : "paybooc-Light";
 $fontMedium : "paybooc-Medium";
 $fontBold : "paybooc-Bold";
 
+$subFontMedium : "S-CoreDream-5Medium";
+
 $mainColor : #4981bd;
