--- a/src/sass/main/main.scss
+++ b/src/sass/main/main.scss
@@ -1,5 +1,28 @@
 @import "../variables";
 
+@mixin containerTitle {
+  h2{
+    text-align: center;
+    font-size: 30px;
+    font-family: $subFontMedium;
+    div{
+      width: 50px;
+      height: 3px;
+      background-color: $mainColor;
+      margin: 20px auto 0px;
+    }
+  }
+
+  @media (max-width:500px){
+    h2{
+      font-size: 24px;
+      div{
+        margin: 10px auto 0px;
+      }
+    }
+  }
+}
+
 .mainBanner{
   .mainSlide{
     .slide{
@@ -101,3 +124,588 @@
   }
 }
 
+.special{
+  text-align: center;
+  margin: 100px 0px;
+  @include containerTitle();
+  .subContent{
+    margin-top: 40px;
+    font-size: 24px;
+  }
+  ul.icon{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    margin: 50px 0px;
+    overflow: hidden;
+    li{
+      position: relative;
+      transition: all 1s;
+      &:nth-child(1){
+        left: -300px;
+      }
+      &:nth-child(2){
+        bottom: -300px;
+      }
+      &:nth-child(3){
+        right: -300px;
+      }
+      p{
+        margin-top: 30px;
+        font-size: 20px;
+      }
+    }
+    li.on{
+      &:nth-child(1){
+        left: 0px;
+      }
+      &:nth-child(2){
+        bottom: 0px;
+      }
+      &:nth-child(3){
+        right: 0px;
+      }
+    }
+  }
+
+  .content{
+    overflow: hidden;
+    div{
+      font-size: 20px;
+      line-height: 1.3;
+      position: relative;
+      transition: right 1s .8s, left 1s .8s, opacity 3s .8s;
+      opacity: 0;
+      span{
+        font-size: 20px;
+        line-height: 1.3;
+        font-family: $fontBold;
+      }
+    }
+    .left{
+      left: -500px;
+    }
+    .right{
+      right: -500px;
+    }
+  }
+  .content.on{
+    .left{
+      left: 0px;
+      opacity: 1;
+    }
+    .right{
+      right: 0px;
+      opacity: 1;
+    }
+  }
+}
+
+.exam{
+  padding: 150px 0px 100px;
+  background-color: #f9f9f9;
+  @include containerTitle();
+  .grid{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    margin-top: 80px;
+    font-family: $subFontMedium;
+    > div{
+      width: 100%;
+      overflow: hidden;
+      h3{
+        font-size: 24px;
+        border-bottom: 2px solid #8fc1e0;
+        display: inline-block;
+        padding-bottom: 7px;
+      }
+      p{
+        margin-top: 30px;
+        line-height: 1.5;
+        font-size: 18px;
+        color: #666;
+      }
+      .examSlide{
+        .slide{
+          img{
+            width: 100%;
+          }
+          h4{
+            margin-top: 30px;
+            font-size: 24px;
+          }
+        }
+        .pageingBall{
+          display: flex;
+          margin-top: 50px;
+          border-radius: 5px;
+          overflow: hidden;
+          background-color: #e5e5e5;
+          span{
+            flex: 1;
+            width: 100%;
+            border-radius: 0;
+            margin: 0 0;
+            border-radius: 5px;
+            background-color: #e5e5e5;
+          }
+          span.swiper-pagination-bullet-active{
+            background-color: $mainColor;
+          }
+        }
+      }
+    }
+  }
+}
+
+.sevice{
+  padding: 200px 0px 100px;
+  text-align: center;
+  @include containerTitle();
+  ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 80px;
+    li{
+      background-color: #fff;
+      padding: 60px 0px;
+      box-shadow: 3px 3px 7px 0 #b7b7b7;
+      position: relative;
+      top: 70px;
+      opacity: 0;
+      @for $i from 1 to 4 {
+        &:nth-child(#{$i}){
+          transition: top .8s, opacity .8s; 
+        }
+      }
+      &:hover{
+        top: -20px !important;
+      }
+      h3{
+        font-size: 30px;
+        line-height: 1;
+        margin: 30px 0px 0px;
+        font-family: $subFontMedium;
+      }
+      div{
+        width: 100px;
+        height: 2px;
+        background-color: $mainColor;
+        display: inline-block;
+        margin: 10px 0px;
+      }
+      p{
+        margin-top: 10px;
+        font-size: 20px;
+        line-height: 1.2;
+      }
+    }
+    li.on{
+      top: 0px;
+      opacity: 1;
+    }
+  }
+}
+
+.snsLink{
+  background-color: #fafafa;
+  padding: 200px 0px 250px;
+  margin-bottom: 230px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: relative;
+  .content{
+    h3{
+      font-size: 24px;
+      margin-bottom: 40px;
+      line-height: 1.2;
+    }
+    p{
+      margin: 20px 0px;
+      font-size: 18px;
+      line-height: 1.2;
+    }
+  }
+  ul{
+    position: absolute;
+    bottom: -230px;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding: 0px 50px;
+    li{
+      padding: 80px 0px 60px;
+      text-align: center;
+      border: 1px solid #d3dddc;
+      background-color: #fff;
+      &:nth-child(1){
+        border-bottom-left-radius: 50px;
+      }
+      &:nth-child(3){
+        border-top-right-radius: 50px;
+      }
+      p{
+        font-size: 22px;
+        line-height: 1.2;
+        margin: 30px 0px;
+      }
+      a{
+        padding: 7px 20px;
+        border-radius: 15px;
+        color: #fff;
+        background-color: $mainColor;
+      }
+    }
+  }
+}
+
+.baunmiLook{
+  @include containerTitle();
+  padding: 200px 0px 100px;
+  .baunmiSlide{
+    margin: 60px 0px 0px;
+    .slide{
+      img{
+        width: 100%;
+      }
+    }
+    .pageingBall{
+      text-align: center;
+      margin-top: 30px;
+      span{
+        width: 12px;
+        height: 12px;
+        border: 2px solid $mainColor;
+        background: none;
+        opacity: 1; 
+      }
+      span.swiper-pagination-bullet-active{
+        background-color: $mainColor;
+      }
+    }
+  }
+}
+
+.loction{
+  .content{
+    background-color: #fbfbfb;
+    width: 100%;
+    padding: 50px 0px;
+    ul{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      li{
+        text-align: center;
+        h3{
+          font-size: 22px;
+          font-family: $subFontMedium;
+          font-weight: bold;
+          margin-bottom: 20px;
+        }
+        p{
+          font-size: 20px;
+          line-height: 1.4;
+          span{
+            font-size: 20px;
+            font-family: $subFontMedium;
+            font-weight: bold;
+            color: $mainColor;
+          }
+          span.lunchTime{
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+
+  .kakaoMap{
+    width: 100%;
+    height: 350px;
+  }
+
+  .loctionDetail{
+    text-align: center;
+    padding: 40px 0px;
+    font-size: 30px;
+    font-family: $subFontMedium;
+    i{
+      font-size: 30px;
+      margin-right: 20px;
+      color: $mainColor;
+    }
+  }
+}
+
+.brand{
+  background-color: #f3f3f3;
+  padding: 40px 0px;
+  .brandSlide{
+    .swiper-wrapper{
+      align-items: center;
+    }
+    .slide{
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
+  }
+}
+
+@media (max-width:1200px){
+  .snsLink{
+    ul{
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width:1000px){
+  .mainBanner{
+    .mainSlide{
+      p{
+        font-size: 50px;
+        span{
+          font-size: 50px;
+          &::after{
+            height: 15px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:700px){
+  .exam{
+    padding: 50px 0px 50px;
+    .grid{
+      grid-template-columns: 1fr;
+      margin-top: 30px;
+      text-align: center;
+      > div{
+        &:first-child{
+          display: none;
+        }
+        .examSlide{
+          .slide h4{
+            margin-top: 15px;
+          }
+          .pageingBall{
+            margin-top: 30px;
+          }
+        }
+      }
+    }
+  }
+
+  .sevice{
+    padding: 100px 0 100px;
+    ul{
+      grid-template-columns: 1fr;
+      margin-top: 50px;
+    }
+  }
+
+  .snsLink{
+    position: relative;
+    margin-bottom: 960px;
+    background-position: 70%;
+    background-size: cover;
+    &::after{
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #00000055;
+    }
+    .content{
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      :is(h3, p){
+        color: #fff;
+      }
+    }
+    ul{
+      z-index: 1;
+      grid-template-columns: 1fr;
+      bottom: -960px;
+      li{
+        :is(&:nth-child(1), &:nth-child(3)){
+          border-bottom-left-radius: 0;
+          border-top-right-radius: 0;
+        }
+      }
+    }
+  }
+
+  .loction{
+    .content{
+      ul{
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        li{
+          padding:0 30px;
+          &:nth-child(2){
+            background-color: #fff;
+            padding: 10px 0px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:600px){
+  .mainBanner{
+    .mainSlide{
+      p{
+        span{
+          display: block;
+          &::after{
+            width: 150px;
+            bottom: -5px;
+          }
+        }
+      }
+    }
+  }
+
+  .special{
+    ul.icon{
+      grid-template-columns: 1fr;
+      grid-gap: 20px;
+      li{
+        &:nth-child(1){
+          left: 0px;
+        }
+        &:nth-child(2){
+          bottom: 0px;
+        }
+        &:nth-child(3){
+          right: 0px;
+        }
+        p{
+          margin-top: 30px;
+          font-size: 20px;
+        }
+      }
+    }
+
+    .content{
+      .left{
+        left: 0px;
+        opacity: 1;
+      }
+      .right{
+        right: 0px;
+        opacity: 1;
+      }
+    }
+  }
+
+  .baunmiLook{
+    padding: 100px 0px 100px;
+  }
+
+  .loction{
+    .loctionDetail{
+      font-size: 20px;
+      i{
+        font-size: 20px;
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+@media (max-width:500px){
+  .mainBanner{
+    .mainSlide{
+      p{
+        font-size: 40px;
+        span{
+          font-size: 40px;
+          &::after{
+            width: 120px;
+          }
+        }
+      }
+    }
+  }
+
+  .special{
+    .content{
+      div{
+        font-size: 14px;
+        letter-spacing: -1px;
+        span{
+          font-size: 14px;
+          font-family: $fontMedium;
+          letter-spacing: -1px;
+        }
+      }
+    }
+    
+  }
+
+  .sevice{
+    ul{
+      li{
+        opacity: 1;
+        &:hover{
+          top: 0 !important;
+        }
+      }
+    }
+  }
+
+  .snsLink{
+    padding: 100px 0px 100px;
+    margin-bottom: 790px;
+    .content{
+      h3{
+        font-size: 20px;
+      }
+      p{
+        font-size: 14px;
+        letter-spacing: -1px;
+        br{
+          display: none;
+        }
+      }
+    }
+    ul{
+      left: 0;
+      bottom: -790px;
+      padding: 0px 15px;
+      li{
+        padding: 30px 0px;
+        p{
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  .loction{
+    .content{
+      ul{
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        li{
+          p{
+            font-size: 16px;
+            span.lunchTime{
+              font-size: 16px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
