--- a/src/sass/main/main.scss
+++ b/src/sass/main/main.scss
@@ -24,9 +24,10 @@
 }
 
 .mainBanner{
+  position: relative;
   .mainSlide{
     .slide{
-      height: 80vh;
+      height: 85vh;
       min-height: 500px;
       background-size: cover;
       background-position: center;
@@ -60,16 +61,34 @@
       }
     }
   }
+  .mouse{
+    position: absolute;
+    top: 83%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    z-index: 1;
+    cursor: pointer;
+  }
 }
 
 .staffIntro{
   .staffSlide{
     .slide{
+      img{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      .moimg{
+        display: none;
+      }
       .content{
         position: absolute;
         top: 50%;
         left: 60%;
         transform: translate(-50%,-50%);
+        white-space: nowrap;
         h2{
           font-size: 50px;
           font-family: $fontBold;
@@ -153,6 +172,7 @@
       p{
         margin-top: 30px;
         font-size: 20px;
+        color: $mainColor;
       }
     }
     li.on{
@@ -172,13 +192,13 @@
     overflow: hidden;
     div{
       font-size: 20px;
-      line-height: 1.3;
+      line-height: 1.5;
       position: relative;
       transition: right 1s .8s, left 1s .8s, opacity 3s .8s;
       opacity: 0;
       span{
         font-size: 20px;
-        line-height: 1.3;
+        line-height: 1.5;
         font-family: $fontBold;
       }
     }
@@ -259,7 +279,8 @@
 }
 
 .sevice{
-  padding: 200px 0px 100px;
+  position: relative;
+  padding: 200px 0px 250px;
   text-align: center;
   @include containerTitle();
   ul{
@@ -306,6 +327,12 @@
       opacity: 1;
     }
   }
+  .bg{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+  }
 }
 
 .snsLink{
@@ -317,14 +344,17 @@
   position: relative;
   .content{
     h3{
-      font-size: 24px;
+      font-size: 28px;
       margin-bottom: 40px;
       line-height: 1.2;
+      color: #767676;
+      font-family: $fontBold;
     }
     p{
       margin: 20px 0px;
       font-size: 18px;
       line-height: 1.2;
+      color: #767676;
     }
   }
   ul{
@@ -350,6 +380,10 @@
         font-size: 22px;
         line-height: 1.2;
         margin: 30px 0px;
+        span{
+          font-size: 22px;
+          font-family: $fontBold;
+        }
       }
       a{
         padding: 7px 20px;
@@ -407,11 +441,15 @@
         p{
           font-size: 20px;
           line-height: 1.4;
+          font-family: $subFontMedium;
           span{
             font-size: 20px;
             font-family: $subFontMedium;
             font-weight: bold;
             color: $mainColor;
+            line-height: 1.4;
+            margin-top: 5px;
+            display: inline-block;
           }
           span.lunchTime{
             font-size: 18px;
@@ -455,6 +493,19 @@
 }
 
 @media (max-width:1200px){
+  .staffIntro{
+    .staffSlide{
+      .slide{
+        img{
+          left: 60%;
+        }
+        .content{
+          left: 70%;
+        }
+      }
+    }
+  }
+
   .snsLink{
     ul{
       width: 100%;
@@ -474,6 +525,48 @@
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width:900px){
+  .staffIntro{
+    text-align: center;
+    .staffSlide{
+      .slide{
+        img{
+          width: 100%;
+          left: 50%;
+        }
+        .pcimg{
+          display: none;
+        }
+        .moimg{
+          display: block;
+        }
+        .content{
+          top: 30%;
+          left: 50%;
+          h2{
+            justify-content: center;
+          }
+          p:nth-child(4){
+            display: none;
+          }
+          a{
+            margin-top: 20px;
+          }
+          .pageNav{
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+
+  .sevice{
+    .bg{
+      display: none;
     }
   }
 }
@@ -575,37 +668,68 @@
     }
   }
 
+  .staffIntro{
+    .staffSlide{
+      .slide{
+        .content{
+          h2{
+            font-size: 40px;
+            letter-spacing: 2px;
+            span{
+              font-size: 26px;
+            }
+          }
+          p{
+            &:nth-child(3){
+              font-size: 28px;
+            }
+            &:nth-child(4){
+              font-size: 16px;
+            }
+          }
+          .pageNav{
+            .nav{
+              width: 36px;
+              height: 36px;
+              line-height: 36px;
+              font-size: 18px;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .special{
     ul.icon{
       grid-template-columns: 1fr;
       grid-gap: 20px;
       li{
+        top: 200px;
+        opacity: 0;
         &:nth-child(1){
           left: 0px;
+          transition: all 1.5s;
         }
         &:nth-child(2){
           bottom: 0px;
+          transition: all 1.5s .2s;
         }
         &:nth-child(3){
           right: 0px;
+          transition: all 1.5s .4s;
         }
         p{
           margin-top: 30px;
           font-size: 20px;
         }
       }
+      li.on{
+        top: 0px;
+        opacity: 1;
+      }
     }
 
-    .content{
-      .left{
-        left: 0px;
-        opacity: 1;
-      }
-      .right{
-        right: 0px;
-        opacity: 1;
-      }
-    }
   }
 
   .baunmiLook{
@@ -652,18 +776,7 @@
     }
     
   }
-
-  .sevice{
-    ul{
-      li{
-        opacity: 1;
-        &:hover{
-          top: 0 !important;
-        }
-      }
-    }
-  }
-
+  
   .snsLink{
     padding: 100px 0px 100px;
     margin-bottom: 790px;
@@ -687,6 +800,9 @@
         padding: 30px 0px;
         p{
           font-size: 18px;
+          span{
+            font-size: 18px;
+          }
         }
       }
     }
@@ -702,6 +818,48 @@
             font-size: 16px;
             span.lunchTime{
               font-size: 16px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:400px){
+  .staffIntro{
+    .staffSlide{
+      .slide{
+        .content{
+          h2{
+            font-size: 32px;
+            letter-spacing: 2px;
+            span{
+              font-size: 22px;
+            }
+          }
+          p{
+            &:nth-child(2){
+              font-size: 18px;
+              margin: 15px 0px;
+            }
+            &:nth-child(3){
+              font-size: 22px;
+              margin-bottom: 10px;
+            }
+            &:nth-child(4){
+              font-size: 14px;
+            }
+          }
+          a{
+            margin-top: 30px;
+          }
+          .pageNav{
+            .nav{
+              width: 36px;
+              height: 36px;
+              line-height: 36px;
+              font-size: 18px;
             }
           }
         }
