--- a/src/sass/subPage/banner.scss
+++ b/src/sass/subPage/banner.scss
@@ -2,9 +2,18 @@
 
 .banner{
   width: 100%;
-  height: 400px;
+  height: 430px;
   position: relative;
   background-color: #aaa;
+  overflow: hidden;
+  img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    min-width: 1920px;
+    width: 100%;
+  }
   h2{
     position: absolute;
     top: 50%;
@@ -19,7 +28,7 @@
 .subNav{
   width: 100%;
   border-bottom: 1px solid #d5d5d5;
-  ul{
+  ul.pc{
     display: flex;
     li{
       flex: 1;
@@ -40,6 +49,18 @@
       a{
         color: #fff;
       }
+    }
+  }
+}
+
+@media (max-width:800px) {
+  .banner{
+    height: 337px;
+    img{
+      min-width: 1500px;
+    }
+    h2{
+      font-size: 50px;
     }
   }
 }
