--- a/src/sass/subPage/banner.scss
+++ b/src/sass/subPage/banner.scss
@@ -22,13 +22,14 @@
     font-size: 70px;
     color: #fff;
     text-shadow: 3px 3px 4px #5f5f5f;
+    white-space: nowrap;
   }
 }
 
 .subNav{
   width: 100%;
   border-bottom: 1px solid #d5d5d5;
-  ul.pc{
+  .pc ul{
     display: flex;
     li{
       flex: 1;
@@ -51,6 +52,69 @@
       }
     }
   }
+  .mobile ul{
+    display: flex;
+    > li{
+      flex: 1;
+      position: relative; 
+      cursor: pointer;
+    &:nth-child(2){
+      border-left: 1px solid #d5d5d5;
+    }
+      h3{
+        font-size: 20px;
+        font-family: $subFontMedium;
+        line-height: 50px;
+        position: relative;
+        padding-left: 15px;
+        i{
+          position: absolute;
+          top: 50%;
+          right: 15px;
+          transform: translateY(-50%);
+          font-size: 16px;
+        }
+      }
+      ol{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        overflow: hidden;
+        max-height: 0px;
+        background-color: #fff;
+        border: 1px solid #d5d5d5;
+        transition:  all .5s;
+        li{
+          width: 100%;
+          a{
+            line-height: 50px;
+            font-size: 18px;
+            font-family: $subFontMedium;
+            width: 100%;
+            padding: 0 15px; 
+            cursor: pointer;
+            &:hover{
+              background-color: #eee;
+            }
+          }
+          &:not(:first-child){
+            border-top: 1px solid #d5d5d5;
+          }
+        }
+      }
+    }
+    > li.on{
+      ol{
+        max-height: 500px;
+      }
+    }
+  }
+}
+
+@media (max-width:1200px) {
+  .wrap.nav{
+    padding: 0;
+  }
 }
 
 @media (max-width:800px) {
@@ -61,6 +125,78 @@
     }
     h2{
       font-size: 50px;
+    }
+  }
+}
+
+@media (max-width:600px) {
+  .banner{
+    height: 250px;
+    img{
+      min-width: auto;
+      width: 100%;
+    }
+    h2{
+      font-size: 35px;
+    }
+  }
+}
+
+@media (max-width:500px) {
+  .subNav{
+    .mobile{
+      ul{
+        > li{
+          h3{
+            font-size: 14px;
+            line-height: 40px;
+          }
+          ol{
+            li{
+              a{
+                font-size: 14px;
+                line-height: 40px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:400px) {
+  .subNav{
+    .mobile{
+      ul{
+        > li{
+          h3{
+            font-size: 12px;
+          }
+          ol{
+            li{
+              a{
+                font-size: 12px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width:350px) {
+  .subNav{
+    .mobile{
+      ul{
+        > li{
+          h3{
+            font-size: 10px;
+            line-height: 35px;
+          }
+        }
+      }
     }
   }
 }
